Fix page layout on ios

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,9 +56,6 @@ body {
 }
 
 .card {
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
     margin-bottom: 20px;
     border: 2px solid cadetblue;
 }
